--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Yili Zhao
 description: My Personal Blog
 author: Yili Zhao
 logo: /static/img/avatar.png
-github: https://github.com/codeasashu
+github: https://github.com/panovr
 about: Freelance developer
 
 baseurl: ""
