--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,13 @@ url: "https://panovr.github.io"
 
 allowsearch: true
 
+disqus_shortname: panovr
+google_analytics: UA-72862926-1
+
+share:
+  twitter_username: \#
+  fb_appid: 000000000000
+
 enableTags: true
 tagarray: []
 
